--- a/docs/demo/demo.css
+++ b/docs/demo/demo.css
@@ -62,7 +62,7 @@ header h1 {
 
 
 .theme-toggle {
-	margin-left: 16px;
+	margin-inline: 16px 60px;
 	display: flex;
 	align-items: center;
 	gap: 8px;
@@ -78,6 +78,13 @@ header h1 {
 	transition: background-color 0.2s ease, color 0.2s ease;
 }
 
+@media (max-width: 768px) {
+  /* When github corner is invisible */
+  .theme-toggle {
+    margin-right: 0;
+  }
+}
+
 .theme-toggle:hover {
 	background-color: var(--code-bg-color);
 	color: var(--text-color);
@@ -85,6 +92,10 @@ header h1 {
 
 .theme-toggle .material-icons {
 	font-size: 20px;
+}
+
+@media screen {
+	
 }
 
 .containers {
